--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,1 +1,7 @@
-
+.main {
+  display: flex;
+  justify-items: center;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
