--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -4,4 +4,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  min-height: 100vh;
+  min-width: 100vw;
+  background: #3FE8AB;
 }
