--- a/src/components/Menu/menu.module.css
+++ b/src/components/Menu/menu.module.css
@@ -2,12 +2,14 @@
   position: relative;
   display: flex;
   border-radius: 0.5rem;
-  background-color: #70c489;
+  background-color: #3FB6E8;
   box-sizing: border-box;
   font-size: 14px;
-  width: 100%;
+  width: 99%;
   padding: 1rem 1rem 0 1rem;
   gap: 30px;
+  border: 1px solid #e8e8e8;
+  margin: 1px;
 }
 
 .radioInputs .radio input {
