--- a/src/components/Logo/logo.module.css
+++ b/src/components/Logo/logo.module.css
@@ -2,7 +2,7 @@
   display: grid;
   place-items: center;
   background: #e3edf7;
-  padding: 1.4em;
+  padding: 1.0em;
   border-radius: 10px;
   box-shadow: 6px 6px 10px -1px rgba(0, 0, 0, 0.15),
     -6px -6px 10px -1px rgba(255, 255, 255, 0.7);
@@ -28,4 +28,8 @@
 .btn:hover svg {
   transform: scale(0.9);
   fill: #333333;
+}
+
+.img {
+  background: none;
 }
