Create cards and personalizing layots with css

--- a/src/app/products/products.module.css
+++ b/src/app/products/products.module.css
@@ -4,6 +4,14 @@
   width: 100%;
 }
 
-.container * {
+.container h1 {
   background: none;
+}
+
+.section {
+  background: none;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  justify-content: center;
 }
