--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,7 @@
   margin: 0;
   padding: 0;
   font-family: "Inter", sans-serif;
-  background-color: #f5f5f5;
+  background-color: #3FE8AB;
   color: #333;
   font-size: 16px;
   line-height: 1.5;
