--- a/src/components/Menu/menu.module.css
+++ b/src/components/Menu/menu.module.css
@@ -6,60 +6,61 @@
   box-sizing: border-box;
   font-size: 14px;
   width: 99%;
-  padding: 1rem 1rem 0 1rem;
+  padding: 1rem;
   gap: 30px;
   border: 1px solid #e8e8e8;
   margin: 1px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  align-items: center;
+  justify-content: center;
 }
 
-.menuContainer .menuItem input {
-  display: none;
-}
-
-.menuContainer .menuItem .menuName {
+.menuContainer .menuItem {
   display: flex;
   cursor: pointer;
   align-items: center;
   justify-content: center;
-  border-top-left-radius: 0.5rem;
-  border-top-right-radius: 0.5rem;
-  border: none;
-  padding: 0.5rem 0.8rem;
+  border-radius: 0.9rem;
+  padding: 0.6rem 0.9rem;
   transition: all 0.15s ease-in-out;
-  position: relative;
+  background-color: #fff;
+  color: #000;
 }
 
-.menuContainer .menuItem input:checked+.menuName {
-  background-color: #e8e8e8;
-  font-weight: 600;
+.menuContainer .menuItem:hover {
+  color: #3FB6E8;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  transform: scale(1.1);
+  transition: 0.5s;
 }
 
-.menuContainer .menuItem input+.menuName:hover {
-  color: #fff;
+.menuName {
+  text-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
+  cursor: pointer;
+  text-decoration: none;
+  transition: all 0.15s ease-in-out;
+  background: #fff;
+  padding: 10px;
 }
 
-.menuContainer .menuItem input:checked+.menuName:hover {
-  color: #1d1d29;
+.menuContainer .menuName:hover {
+  color: #3FB6E8;
 }
 
-.menuContainer .menuItem input:checked+.menuName::after,
-.menuContainer .menuItem input:checked+.menuName::before {
-  content: "";
-  position: absolute;
-  width: 10px;
-  height: 10px;
-  background-color: #70c489;
-  bottom: 0;
+.menuContainer .menuItem:active {
+  transform: scale(0.98);
 }
 
-.menuContainer .menuItem input:checked+.menuName::after {
-  right: -10px;
-  border-bottom-left-radius: 300px;
-  box-shadow: -3px 3px 0px 3px #e8e8e8;
-}
 
-.menuContainer .menuItem input:checked+.menuName::before {
-  left: -10px;
-  border-bottom-right-radius: 300px;
-  box-shadow: 3px 3px 0px 3px #e8e8e8;
+/* Media queries para telas menores */
+@media (max-width: 768px) {
+  .menuContainer {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .menuContainer .menuItem {
+    width: 100%;
+    justify-content: flex-start;
+  }
 }
