Connecting api aplications finally

--- a/src/app/products/products.module.css
+++ b/src/app/products/products.module.css
@@ -5,6 +5,10 @@
 }
 
 .container h1 {
+  text-align: center;
+  text-shadow: 0 0 10px #fff;
+  color: #fff;
+  font-size: 40px;
   background: none;
 }
 
